--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,7 @@ VotingWebApp/Migrations/20240120113628_updateKandydat.Designer.cs
 VotingWebApp/Migrations/20240120113628_updateKandydat.cs
 VotingWebApp/Migrations/20240120113414_new db.Designer.cs
 VotingWebApp/Migrations/20240120113414_new db.cs
+*.exe
+*.cache
+*.exe
+*.editorconfig
