--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,42 @@ VotingWebApp/Migrations/20240120113414_new db.cs
 *.cache
 *.exe
 *.editorconfig
+*.json
+*.dll
+*.exe
+*.pdb
+VotingWebApp/.vs/VotingWebApp/v17/.suo
+*.editorconfig
+*.cache
+*.props
+*.json
+VotingWebApp/obj/VotingWebApp.csproj.nuget.g.props
+VotingWebApp/obj/VotingWebApp.csproj.nuget.dgspec.json
+VotingWebApp/obj/project.nuget.cache
+VotingWebApp/obj/project.assets.json
+VotingWebApp/obj/Debug/net6.0/VotingWebApp.pdb
+VotingWebApp/obj/Debug/net6.0/VotingWebApp.genruntimeconfig.cache
+VotingWebApp/obj/Debug/net6.0/VotingWebApp.GeneratedMSBuildEditorConfig.editorconfig
+VotingWebApp/obj/Debug/net6.0/VotingWebApp.dll
+VotingWebApp/obj/Debug/net6.0/VotingWebApp.csproj.FileListAbsolute.txt
+VotingWebApp/obj/Debug/net6.0/VotingWebApp.csproj.CoreCompileInputs.cache
+VotingWebApp/obj/Debug/net6.0/VotingWebApp.csproj.AssemblyReference.cache
+VotingWebApp/obj/Debug/net6.0/VotingWebApp.assets.cache
+VotingWebApp/obj/Debug/net6.0/staticwebassets.pack.json
+VotingWebApp/obj/Debug/net6.0/staticwebassets.development.json
+VotingWebApp/obj/Debug/net6.0/staticwebassets.build.json
+VotingWebApp/obj/Debug/net6.0/refint/VotingWebApp.dll
+VotingWebApp/obj/Debug/net6.0/ref/VotingWebApp.dll
+VotingWebApp/obj/Debug/net6.0/apphost.exe
+VotingWebApp/bin/Debug/net6.0/VotingWebApp.staticwebassets.runtime.json
+VotingWebApp/bin/Debug/net6.0/VotingWebApp.pdb
+VotingWebApp/bin/Debug/net6.0/VotingWebApp.exe
+VotingWebApp/bin/Debug/net6.0/VotingWebApp.dll
+VotingWebApp/.vs/VotingWebApp/v17/.suo
+*.props
+*.json
+*.cache
+*.pdb
+*.editorconfig
+VotingWebApp/bin/Debug/net6.0/VotingWebApp.exe
+VotingWebApp/bin/Debug/net6.0/VotingWebApp.dll
