--- a/VotingAndroidApp/app/src/main/AndroidManifest.xml
+++ b/VotingAndroidApp/app/src/main/AndroidManifest.xml
@@ -15,6 +15,21 @@
         android:theme="@style/Theme.VotingApp"
         tools:targetApi="31">
         <activity
+            android:name=".Voter.PodziekowanieIZablokowanie"
+            android:exported="false" />
+        <activity
+            android:name=".Voter.Senat.PotwierdzenieWyboruSenatora"
+            android:exported="false" />
+        <activity
+            android:name=".Voter.Senat.PonownePotwierdzenieKodu2"
+            android:exported="false" />
+        <activity
+            android:name=".Voter.Senat.WyborKandydatSenat"
+            android:exported="false" />
+        <activity
+            android:name=".Voter.Senat.WyborSenatu"
+            android:exported="false" />
+        <activity
             android:name=".Voter.Sejm.PotwierdzenieWyboru"
             android:exported="false" />
         <activity
