--- a/VotingAndroidApp/app/src/main/AndroidManifest.xml
+++ b/VotingAndroidApp/app/src/main/AndroidManifest.xml
@@ -15,6 +15,12 @@
         android:theme="@style/Theme.VotingApp"
         tools:targetApi="31">
         <activity
+            android:name=".AdminLoginActivity"
+            android:exported="false" />
+        <activity
+            android:name=".AdminPanelActivity"
+            android:exported="false" />
+        <activity
             android:name=".Voter.PodziekowanieIZablokowanie"
             android:exported="false" />
         <activity
