Changed wording of certain objects

--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,5 @@
 VotingWebApp\obj\Debug\net6.0\VotingWebApp.csproj.FileListAbsolute.txt
 VotingWebApp/Migrations/*
 *.dll
+/VotingAndroidApp/.idea/.name
+/VotingAndroidApp/.idea
